--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <h1>TO DO LIST</h1>
     <button onclick="addToList()">Add to List</button>
     <input type="text" id="tasklist" name="fname"><br><br>
-    <ol id="olist" class="list-group" >
-
-    </ol>
+    <ul id="olist" class="list-group" >
+        <li class="list-group-item">Dar mimos al mapache</li>
+        <li class="list-group-item">Rascarle la pansa al mapachin</li>
+    </ul>
 
 </body>
 
