--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 
 <body>
     <h1>TO DO LIST</h1>
-    <button onclick="addToList()">Add to List</button>
-    <input type="text" id="tasklist" name="fname"><br><br>
-    
+    <br>
+    <button class="btn btn-dark" onclick="addToList()">Add to List</button>
+    <input type="text" id="tasklist" name="fname">
+    <br><br>
     <ul id="olist" class="list-group" >
         <li class="list-group-item">Dar mimos al mapache</li>
         <li class="list-group-item">Rascarle la pansa al mapachin</li>
     </ul>
+    <br>
+    <button class="btn btn-danger">Eliminate task</button>
 
 </body>
 
