--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <!-- Jquery -->
+    <script src="jquery-3.5.0.min.js"></script>
+    <!-- JS -->
     <script src="functions.js"></script>
     <title>Document</title>
 </head>
@@ -20,10 +23,13 @@
     <input type="text" id="tasklist" name="fname">
     <br><br>
     <ul id="olist" class="list-group" >
-        
     </ul>
     <br>
-    <button class="btn btn-danger">Eliminate task</button>
+    <input type="text" id="deleteItem" name="fname">
+    <button class="btn btn-danger" onclick="deleteFromList()">Eliminate to do</button>
+    <!-- <br><br> -->
+    <!-- <button class="btn btn-info" onclick="searchList()">Look for to do</button> -->
+
 
 </body>
 
