--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body>
     <h1>TO DO LIST</h1>
     <br>
-    <button class="btn btn-dark" onclick="addToList()">Add to List</button>
+    <button class="btn btn-dark" onclick="addToList()">Add</button>
     <input type="text" id="tasklist" name="fname">
     <br><br>
     <ul id="olist" class="list-group" >
     </ul>
     <br>
     <input type="text" id="deleteItem" name="fname">
-    <button class="btn btn-danger" onclick="deleteFromList()">Eliminate to do</button>
+    <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
     <!-- <br><br> -->
     <!-- <button class="btn btn-info" onclick="searchList()">Look for to do</button> -->
 
