Added enter as submit triggering and checking there are no tasks to delete

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>TO DO LIST</h1>
             <br>
 
-            <button class="btn btn-dark" onclick="addToList()">Add</button>
+            <button class="btn btn-dark" id="addButton" onclick="addToList()">Add</button>
             <input type="text" id="tasklist" name="fname">
             <br><br>
             <ul id="olist" class="list-group">
