alerts replaced by inline texts

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 
             <button class="btn btn-dark" id="addButton" onclick="addToList()">Add</button>
             <input type="text" id="tasklist" name="fname">
-            <br><br>
+            <br>
+            <p id="addText"></p>
+            <br>
             <ul id="olist" class="list-group">
             </ul>
             <br>
             <input type="text" id="deleteItem" name="fname">
             <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
+            <p id="deleteText"></p>
             <!-- <br><br> -->
             <!-- <button class="btn btn-info" onclick="searchList()">Look for to do</button> -->
         </div>
