added favicon and title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <script src="jquery-3.5.0.min.js"></script>
     <!-- JS -->
     <script src="functions.js"></script>
-    <title>Document</title>
+    <link rel="icon" href="tick.jpg">
+
+    <title>Your Reliable To-Do List</title>
 </head>
 
 <body>
