added certificates to commenting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- JS -->
     <script src="functions.js"></script>
     <link rel="icon" href="tick.jpg">
-
+    <!-- Certificate: /.well-known/acme-challenge/_DbvKV_AqtuFlKv7N_mmX79pOlaqC4NdRx-QOdKIAaE
+                    : /.well-known/acme-challenge/92rdZ4oPts5RDkkL6QislXGei1gyaXmf-uVwDztMvrc -->
     <title>Your Reliable To-Do List</title>
 </head>
 
