--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">    <!-- Jquery -->
-    <script src="jquery-3.5.0.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">    
+    <!-- Jquery -->
+    <script src="js/jquery/jquery-3.5.0.min.js"></script>
+    <!-- UI -->
+    <script src="js/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
     <!-- JS -->
-    <script src="functions.js"></script>
-    <link rel="icon" href="tick.jpg">
+    <script src="js/functions.js"></script>
+    <link rel="icon" href="images/tick.jpg">
     <!-- Certificate: /.well-known/acme-challenge/_DbvKV_AqtuFlKv7N_mmX79pOlaqC4NdRx-QOdKIAaE
                     : /.well-known/acme-challenge/92rdZ4oPts5RDkkL6QislXGei1gyaXmf-uVwDztMvrc -->
     <title>Your Reliable To-Do List</title>
