draggable functions included (error while initiating jquery related files)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <script src="js/jquery/jquery-3.5.0.min.js"></script>
     <!-- UI -->
     <script src="js/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery/jquery-ui-1.12.1/jquery-ui.structure.min.css"></script>
+    <script src="js/jquery/jquery-ui-1.12.1/jquery-ui.theme.min.css"></script>
+    <!-- Touch Punch -->
+    <script src="js/jquery/jquery.ui.touch-punch.min.js"></script>
     <!-- JS -->
     <script src="js/functions.js"></script>
     <link rel="icon" href="images/tick.jpg">
