--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
     <!-- <div class="container"> -->
         <div class="text-center">
+            <div id="entireList"> 
             <h1>TO DO LIST</h1>
             <br>
-
             <button class="btn btn-dark" id="addButton" onclick="addToList()">Add</button>
             <input type="text" id="tasklist" name="fname">
             <br>
@@ -43,8 +43,8 @@
             <input type="text" id="deleteItem" name="fname">
             <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
             <p id="deleteText"></p>
-            <!-- <br><br> -->
-            <!-- <button class="btn btn-info" onclick="searchList()">Look for to do</button> -->
+            </div>
+            <div class="fixed-bottom" id="author">Made by Andres Alvarez</div>
         </div>
     <!-- </div> -->
 </body>
