included github link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
     <!-- Jquery -->
     <script src="js/jquery/jquery-3.5.0.min.js"></script>
     <!-- UI -->
@@ -28,8 +28,8 @@
 
 <body>
     <!-- <div class="container"> -->
-        <div class="text-center">
-            <div id="entireList"> 
+    <div class="text-center">
+        <div id="entireList">
             <h1>TO DO LIST</h1>
             <br>
             <button class="btn btn-dark" id="addButton" onclick="addToList()">Add</button>
@@ -43,9 +43,9 @@
             <input type="text" id="deleteItem" name="fname">
             <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
             <p id="deleteText"></p>
-            </div>
-            <div class="fixed-bottom" id="author">Made by Andres Alvarez</div>
         </div>
+        <div class="fixed-bottom" id="author">Made by <a href="https://github.com/xDrews">Andres Alvarez</a></div>
+    </div>
     <!-- </div> -->
 </body>
 
