new tab to open github

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
             <p id="deleteText"></p>
         </div>
-        <div class="fixed-bottom" id="author">Made by <a href="https://github.com/xDrews">Andres Alvarez</a></div>
+        <div class="fixed-bottom" id="author">Made by <a href="https://github.com/xDrews" target="_blank">Andres Alvarez</a></div>
     </div>
     <!-- </div> -->
 </body>
