even fancier buttons and author text changed to white

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             </ul>
             <br>
             <input type="text" id="deleteItem" name="fname">
-            <button class="btn btn-danger" onclick="deleteFromList()">Eliminate</button>
+            <button class="btn btn-danger" onclick="deleteFromList()" id="deleteButton">Eliminate</button>
             <p id="deleteText"></p>
         </div>
-        <div class="fixed-bottom" id="author">Made by <a href="https://github.com/xDrews" target="_blank">Andres Alvarez</a></div>
+        <div class="fixed-bottom" id="author">Made by <a href="https://github.com/xDrews" target="_blank" id="gitlink">Andres Alvarez</a></div>
     </div>
     <!-- </div> -->
 </body>
