changed h1 of the web to the list project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- <div class="container"> -->
     <div class="text-center">
         <div id="entireList">
-            <h1>TO DO LIST</h1>
+            <h1>The List Project</h1>
             <br>
             <button class="btn btn-dark" id="addButton" onclick="addToList()">Add</button>
             <input type="text" id="tasklist" name="fname">
